# emotigrad

./: .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  custom_personality.py  mnist_training.py
src/emotigrad/: __init__.py  base.py  colors.py  personalities.py  types.py
tests/: test_colors.py  test_emotional_optimizer_basic.py  test_message_every.py  test_personalities.py  test_registry_and_integration.py  test_smoke.py
