[project]
name = "emotigrad"
version = "0.0.1"
description = "Emotional optimizer wrappers for PyTorch training loops."
authors = [{ name = "Jordan Sinclair" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch"
]

[tool.setuptools]
package-dir = {"" = "src"}  # â† tells setuptools where your package root is

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
