[project]
name = "emotigrad"
version = "0.0.1"
description = "Emotional optimizer wrappers for PyTorch training loops."
authors = [{ name = "Jordan Sinclair" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "torch"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

select = ["E", "F", "I"]  # E/F = pycodestyle+pyflakes, I = isort rules
ignore = [
    "E501",  # Let Black handle line length
]

[tool.ruff.format]
# If you prefer Ruff *only* for linting and keep Black as formatter:
skip = true


[tool.setuptools]
package-dir = {"" = "src"}  # â† tells setuptools where your package root is

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
