[project]
name = "emotigrad"
version = "0.0.2"
description = "Emotional optimizer wrappers for PyTorch training loops."
authors = [{ name = "Jordan Sinclair" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

keywords = ["pytorch", "optimizer", "deep-learning", "training", "fun"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

select = ["E", "F", "I"]  # E/F = pycodestyle+pyflakes, I = isort rules
ignore = [
    "E501",  # Let Black handle line length
]

[tool.setuptools]
package-dir = {"" = "src"}  # â† tells setuptools where your package root is

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
